--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -75,29 +75,38 @@
         android:layout_below="@+id/settings_profile_image"
         android:layout_centerHorizontal="true"
         />
+
     <EditText
         android:id="@+id/settngs_user_name"
-        android:layout_width="match_parent"
+        android:layout_width="390dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/settings_profile_image"
-        android:hint="User name"
-        android:textColorHint="@color/textColor"
-        android:layout_margin="15dp"
+
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="10dp"
+
+        android:layout_marginBottom="15dp"
+        android:hint="User Name"
         android:padding="10dp"
         android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor" />
 
-        />
     <EditText
         android:id="@+id/settngs_user_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="397dp"
+        android:layout_height="44dp"
         android:layout_below="@+id/settngs_user_name"
-        android:hint="User name"
-        android:textColorHint="@color/textColor"
-        android:layout_margin="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginBottom="15dp"
+        android:hint="Email"
         android:padding="10dp"
         android:textColor="@color/textColor"
-        />
+        android:textColorHint="@color/textColor" />
     <EditText
         android:id="@+id/settngs_address"
         android:layout_width="match_parent"
