--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -9,14 +9,10 @@
     tools:context=".HomeActivity"
     tools:showIn="@layout/app_bar_home">
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
 
-        />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycle_view"
+        android:id="@+id/recycle_menu"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
 
