--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -92,8 +92,9 @@
         android:textColor="@color/textColor"
         android:textColorHint="@color/textColor" />
 
+
     <EditText
-        android:id="@+id/settngs_user_email"
+        android:id="@+id/settngs_user_phone"
         android:layout_width="397dp"
         android:layout_height="44dp"
         android:layout_below="@+id/settngs_user_name"
@@ -103,7 +104,7 @@
         android:layout_marginEnd="15dp"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:hint="Email"
+        android:hint="Order Phone"
         android:padding="10dp"
         android:textColor="@color/textColor"
         android:textColorHint="@color/textColor" />
@@ -111,7 +112,7 @@
         android:id="@+id/settngs_address"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/settngs_user_email"
+        android:layout_below="@+id/settngs_user_phone"
         android:hint="Address"
         android:textColorHint="@color/textColor"
         android:layout_margin="15dp"
