--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -52,6 +52,7 @@
         />
 
     <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+        android:id="@+id/number_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:elevation="6dp"
@@ -66,6 +67,18 @@
 
     </com.cepheuen.elegantnumberbutton.view.ElegantNumberButton>
 
+ <!--<Button
 
+        android:id="@+id/add_cart_button"
+        android:layout_width="400dp"
+        android:layout_height="wrap_content"
 
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+
+        android:layout_marginBottom="119dp"
+        android:background="@color/orderButton"
+        android:src="@drawable/nav_cart"
+        android:text="ADD to cart" />-->
 </RelativeLayout>
