--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -9,9 +9,9 @@
             android:icon="@drawable/cart"
             android:title="Cart" />
         <item
-            android:id="@+id/nav_orders"
+            android:id="@+id/nav_search"
             android:icon="@drawable/orders"
-            android:title="Orders"
+            android:title="Search"
             android:iconTint="@android:color/white"/>
         <item
             android:id="@+id/nav_categories"
