--- a/MACRO2/app/src/main/res/layout/activity_create.xml
+++ b/MACRO2/app/src/main/res/layout/activity_create.xml
@@ -27,8 +27,11 @@
             android:id="@+id/emailEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="260dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="54dp"
+            android:layout_marginTop="162dp"
+            android:layout_marginEnd="58dp"
             android:ems="10"
             android:fontFamily="@font/poppins_light"
             android:hint="Email"
@@ -60,8 +63,12 @@
             android:id="@+id/passEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="350dp"
+            android:layout_below="@+id/emailEt"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="54dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="59dp"
             android:ems="10"
             android:fontFamily="@font/poppins_light"
             android:hint="Password"
@@ -74,15 +81,16 @@
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="200dp"
         android:layout_height="60dp"
-        android:background="@drawable/btn"
+        android:layout_alignTop="@+id/passEt"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="160dp"
+        android:layout_marginTop="340dp"
         android:layout_marginEnd="54dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginBottom="72dp"
+        android:background="@drawable/btn"
         android:text="Create Employee" />
 
 
