--- a/MACRO2/app/src/main/res/layout/activity_main.xml
+++ b/MACRO2/app/src/main/res/layout/activity_main.xml
@@ -27,8 +27,11 @@
             android:id="@+id/emailEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="100dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="58dp"
+            android:layout_marginTop="62dp"
+            android:layout_marginEnd="55dp"
             android:ems="10"
             android:fontFamily="@font/poppins_light"
             android:hint="Email"
@@ -39,8 +42,12 @@
             android:id="@+id/passEt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="200dp"
+            android:layout_below="@+id/emailEt"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="57dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginEnd="56dp"
             android:ems="10"
             android:fontFamily="@font/poppins_light"
             android:hint="Password"
