--- a/app/src/main/res/layout/activity_sm__add__items.xml
+++ b/app/src/main/res/layout/activity_sm__add__items.xml
@@ -51,7 +51,7 @@ android:background="#E6E4EAEE"
 
 
             <EditText
-                android:id="@+id/editTxt_category"
+                android:id="@+id/editText_category"
                 android:layout_width="wrap_content"
                 android:layout_height="52dp"
                 android:layout_marginStart="8dp"
@@ -81,7 +81,7 @@ android:background="#E6E4EAEE"
                 android:textColor="#020716" />
 
             <EditText
-                android:id="@+id/editTxt_pname"
+                android:id="@+id/editTxt_pName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
@@ -163,10 +163,11 @@ android:background="#E6E4EAEE"
         </LinearLayout>
 
         <ImageView
-            android:id="@+id/imageUpload"
+            android:id="@+id/image_Upload"
             android:layout_width="150dp"
             android:layout_height="150dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/ic_menu_gallery"/>
 
         <Button
             android:id="@+id/btn_submit"
