--- a/app/src/main/res/menu/activity_store__management_drawer.xml
+++ b/app/src/main/res/menu/activity_store__management_drawer.xml
@@ -5,11 +5,11 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_store"
+            android:id="@+id/nav_store_sm"
             android:icon="@drawable/category"
             android:title="@string/menu_store" />
         <item
-            android:id="@+id/nav_add"
+            android:id="@+id/nav_add_sm"
             android:icon="@drawable/ic_menu_send"
             android:title="@string/menu_add" />
 
